--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       window.addEventListener("load", () => {
         const file = document.getElementById("imageFile");
         const maxImageWidth = 200;
-        const saveImageAs = SaveImageAs.JPG(maxImageWidth, 1);
+        const saveImageAs = saveImageAs.JPG(maxImageWidth, 1);
 
         file &&
           file.addEventListener("change", e => {
