--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>Save Image As Preview</title>
+    <style>
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+      .container > div {
+        width: 300px;
+      }
+    </style>
   </head>
   <body>
-    <img id="result" />
-    <input type="file" accept=".jpg,.jpeg,.png,.tiff,.svg," id="imageFile" />
-    <script>
-      window.addEventListener("load", () => {
-        const file = document.getElementById("imageFile");
-        const maxImageWidth = 200;
-        const toBase64 = saveImageAs.JPG(maxImageWidth, 1);
+    <div class="container"></div>
 
-        file &&
-          file.addEventListener("change", e => {
-            toBase64
-              .onChange(e)
-              .then(base => {
-                console.log("done!");
-                document.getElementById("result").src = base;
-              })
-              .catch(err => {
-                console.log("error: ", err);
-              });
-          });
-      });
-    </script>
+    <script src="../docs/mock.js"></script>
   </body>
 </html>
