--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>Save Image As Preview</title>
     <style>
+      body {
+        background-color: rgba(0, 0, 0, 0.125);
+      }
       .container {
         display: flex;
         flex-wrap: wrap;
